--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a href="index.html" class="navbar-brand">&#60;david.tran&#47;&#62;</a>
+        <a href="#homePage" class="navbar-brand">&#60;david.tran&#47;&#62;</a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -51,7 +51,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="bold centered">WELCOME</h1>
-        <p class="centered" id="separatingLine">__</p>
+        <p class="centered" id="separatingLine">_</p>
         <p class="lead centered" id="welcomeParagraph">I'm David and I'm a Computer Engineering major at the University of California, Irvine.
           I've created this website to share my projects with others.</p>
           <form class="centered">
@@ -64,6 +64,15 @@
   <!-- Second container for the about page -->
   <div class="container contentContainer" id="aboutPage">
     <div class="row">
+      <div class="col-md-3 col-md-offset-1 centered marginTopCircleImage">
+        <img class="circleImage" src="images/david-image.png" />
+      </div>
+      <div class="col-md-offset-1 col-md-6 marginTopContent">
+        <h1 class="centered">Hi, I'm David!</h1>
+        <p>I am a 20 year old Computer Engineering major at the University of California, Irvine. I was born in Northern California but I am
+          currently living in Southern California. I enjoy watching TV shows, reading books, listening to music, and coding.
+          I am fluent in both English and Vietnamese. I have a lot of interest in technology, especially in web and mobile app development.</p>
+      </div>
     </div>
   </div>
 
