Added function to the 'FIND OUT MORE' button and smooth scrolling.

--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
   <!-- First container for the home page -->
   <div class="container contentContainer" id="homePage">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h1 class="bold centered">WELCOME</h1>
-        <p class="centered" id="separatingLine">_</p>
-        <p class="lead centered" id="welcomeParagraph">I'm David and I'm a Computer Engineering major at the University of California, Irvine.
+      <div class="col-md-6 col-md-offset-3 centered">
+        <h1 class="bold">WELCOME</h1>
+        <p id="separatingLine">_</p>
+        <p class="lead" id="welcomeParagraph">I'm David and I'm a Computer Engineering major at the University of California, Irvine.
           I've created this website to share my projects with others.</p>
-          <form class="centered">
-              <input type="submit" class="btn btn-custom btn-lg" value="FIND OUT MORE"/>
-          </form>
+        <a href="#aboutPage" class="btn btn-custom btn-lg centered" id="aboutButton">FIND OUT MORE</a>
       </div>
     </div>
   </div>
