--- a/index.html
+++ b/index.html
@@ -74,6 +74,79 @@
     </div>
   </div>
 
+  <!-- Third container for the skills page-->
+  <div class="container contentContainer" id="skillsPage">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Skills</h1>
+        <div class="col-md-6 col-md-offset-3">
+          <h2>Web Development</h2>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+              <span class="sr-only">70% Complete (Success)</span>
+              <span class="progressBarLabel">HTML</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+              <span class="sr-only">60% Complete (Info)</span>
+              <span class="progressBarLabel">CSS</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+              <span class="sr-only">40% Complete (Warning)</span>
+              <span class="progressBarLabel">JavaScript</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+              <span class="sr-only">30% Complete (Warning)</span>
+              <span class="progressBarLabel">jQuery</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-yellow" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+              <span class="sr-only">40% Complete (Yellow)</span>
+              <span class="progressBarLabel">Bootstrap</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-lightBlue" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+              <span class="sr-only">20% Complete (Light Blue)</span>
+              <span class="progressBarLabel">PHP</span>
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-purple" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+              <span class="sr-only">10% Complete (Purple)</span>
+              <span class="progressBarLabel">MySQL</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <h2>Other Skills</h2>
+        </div>
+        <div class="col-md-3 col-md-offset-2">
+          <h3>Programming Languages</h3>
+          <ul>
+            <li>Python</li>
+            <li>C</li>
+            <li>Java</li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-md-offset-2">
+          <h3>Other Software</h3>
+          <ul>
+            <li>Microsoft Office</li>
+            <li>Lyx</li>
+            <li>Android Studio</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Reference to jQuery -->
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
