Added a footer section.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,33 @@
     </div>
   </div>
 
+  <!-- Container for the footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="col-md-3 col-md-offset-2">
+        <h4>Navigation</h4>
+        <ul>
+          <li><a href="#homePage">Home</a></li>
+          <li><a href="#aboutPage">About</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Resume</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-md-offset-2">
+        <h4>Connect With Me!</h4>
+        <ul>
+          <li><a href="https://github.com/davidlamt" target="_blank">GitHub</a></li>
+          <li><a href="https://twitter.com/davidlamt" target="_blank">Twitter</a></li>
+        </ul>
+      </div>
+      <div class="col-md-12">
+        <p class="text-muted">Copyright &#169; 2015 <a href="http://www.davidtranscend.com/"><strong>www.davidtranscend.com</strong></a> - All right reserved</p>
+      </div>
+    </div>
+  </footer>
+
   <!-- Reference to jQuery -->
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
