Added a toast message for when the site loads.

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+  <!-- Link to the toastr files -->
+  <link href="toastr/toastr.css" rel="stylesheet"/>
+  <script src="toastr/toastr.js"></script>
+
   <!-- Reference to the custom JavaScript file -->
   <script type="text/javascript" src="creative.js"></script>
 
