--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <!-- First container for the home page -->
+  <!-- Container for the home page -->
   <div class="container contentContainer" id="homePage">
     <div class="row">
       <div class="col-md-6 col-md-offset-3 centered">
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <!-- Second container for the about page -->
+  <!-- Container for the about page -->
   <div class="container contentContainer" id="aboutPage">
     <div class="row">
       <div class="col-md-3 col-md-offset-1 centered">
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <!-- Third container for the knowledge page-->
+  <!-- Container for the knowledge page-->
   <div class="container contentContainer" id="knowledgePage">
     <div class="row">
       <div class="col-md-12">
@@ -152,6 +152,57 @@
     </div>
   </div>
 
+  <!-- Container for the education page -->
+  <div class="container contentContainer" id="educationPage">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Education</h1>
+      </div>
+      <div class="col-md-5 col-md-offset-1">
+        <h2>College Education</h2>
+        <h3>University of California, Irvine</h3>
+        <p>Bachelor in Computer Engineering, expected in 2016</p>
+        <div class="accordion">
+          <h4>Fall 2015 - Spring 2016</h4>
+          <p>Starting this Fall</p>
+        </div>
+        <div class="accordion">
+          <h4>Fall 2014 - Spring 2015</h4>
+          <p>test</p>
+        </div>
+        <div class="accordion">
+          <h4>Fall 2013 - Spring 2014</h4>
+          <p>test</p>
+        </div>
+        <div class="accordion">
+          <h4>Fall 2012 - Spring 2013</h4>
+          <div>
+            <h5>Major</h5>
+            <ul>
+              <li>Introduction to Programming</li>
+              <li>Introduction to Electrical Engineering</li>
+              <li>Computer Systems and Programming in C</li>
+              <li>Introduction to Digital Systems</li>
+            </ul>
+            <h5>General Education</h5>
+            <ul>
+              <li>Calclus</li>
+              <li>Introduction to Physics</li>
+              <li>Gender and Power Studies</li>
+              <li>Critical Reading</li>
+              <li>Multivariable Calculus</li>
+              <li>Classical Physics</li>
+              <li>Infinite Series and Linear Algebra</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <h2>Online Education</h2>
+      </div>
+    </div>
+  </div>
+
   <!-- Container for the footer -->
   <footer class="footer">
     <div class="container">
@@ -182,6 +233,10 @@
 
   <!-- Reference to jQuery -->
   <script src="js/jquery-1.11.3.min.js"></script>
+
+  <!-- jQuery UI -->
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
