Updated education section with college courses.

--- a/index.html
+++ b/index.html
@@ -164,15 +164,47 @@
         <p>Bachelor in Computer Engineering, expected in 2016</p>
         <div class="accordion">
           <h4>Fall 2015 - Spring 2016</h4>
-          <p>Starting this Fall</p>
+          <p>Starting this Fall!</p>
         </div>
         <div class="accordion">
           <h4>Fall 2014 - Spring 2015</h4>
-          <p>test</p>
+          <div>
+            <h5>Major</h5>
+            <ul>
+              <li>Organization of Digital Computers</li>
+              <li>Electrical Engineering Analysis</li>
+              <li>Organization of Digital Computers Lab</li>
+              <li>Introduction to Computer Networks</li>
+              <li>Electronics I</li>
+              <li>Electronics II</li>
+              <li>Software Engineering Projects in C</li>
+              <li>Continuous-Time Signals and Systems</li>
+              <li>Discrete-Time Signals and Systems</li>
+              <li>Object-Oriented Systems and Programming</li>
+              <li>Processor Hardware and Software Interfaces</li>
+            </ul>
+          </div>
         </div>
         <div class="accordion">
           <h4>Fall 2013 - Spring 2014</h4>
-          <p>test</p>
+          <div>
+            <h5>Major</h5>
+            <ul>
+              <li>Advanced C Programming</li>
+              <li>Engineering Probability</li>
+              <li>Network Analysis I</li>
+              <li>Network Analysis II</li>
+            </ul>
+            <h5>General Education</h5>
+            <ul>
+              <li>Introduction to Differential Equations</li>
+              <li>Introduction to Anthropology</li>
+              <li>Introduction to Philosophy</li>
+              <li>Discrete Time Mathematics</li>
+              <li>Introduction to Art History</li>
+              <li>Adolescent Psychology</li>
+            </ul>
+          </div>
         </div>
         <div class="accordion">
           <h4>Fall 2012 - Spring 2013</h4>
@@ -186,13 +218,15 @@
             </ul>
             <h5>General Education</h5>
             <ul>
-              <li>Calclus</li>
+              <li>Calculus</li>
               <li>Introduction to Physics</li>
               <li>Gender and Power Studies</li>
               <li>Critical Reading</li>
               <li>Multivariable Calculus</li>
               <li>Classical Physics</li>
               <li>Infinite Series and Linear Algebra</li>
+              <li>Introduction to Psychology</li>
+              <li>Argument and Research</li>
             </ul>
           </div>
         </div>
