Updated with completed education section.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
           <h4>Fall 2015 - Spring 2016</h4>
           <p>Starting this Fall!</p>
         </div>
+        <br />
         <div class="accordion">
           <h4>Fall 2014 - Spring 2015</h4>
           <div>
@@ -185,6 +186,7 @@
             </ul>
           </div>
         </div>
+        <br />
         <div class="accordion">
           <h4>Fall 2013 - Spring 2014</h4>
           <div>
@@ -206,6 +208,7 @@
             </ul>
           </div>
         </div>
+        <br />
         <div class="accordion">
           <h4>Fall 2012 - Spring 2013</h4>
           <div>
@@ -233,6 +236,23 @@
       </div>
       <div class="col-md-5">
         <h2>Online Education</h2>
+          <h3><a href="https://www.udemy.com/complete-web-developer-course/" target="_blank">The Complete Web Developer Course</a></h3>
+          <p>Currently Enrolled</p>
+          <h3><a href="https://www.udemy.com/design-and-develop-a-killer-website-with-html5-and-css3/" target="_blank">
+            Build Responsive Real World Websites with HTML5 and CSS3</a></h3>
+          <p>Currently Enrolled</p>
+          <h3><a href="https://www.udemy.com/learn-bootstrap-development-by-building-10-projects/" target="_blank">
+            Learn Bootstrap Development By Building 10 Projects</a></h3>
+          <p>Currently Enrolled</p>
+          <h3><a href="https://www.udemy.com/the-complete-web-development-course-learn-by-building-apps/" target="_blank">
+            Projects in PHP and MySQL</a></h3>
+          <p>Currently Enrolled</p>
+      </div>
+      <div class="col-md-3 col-md-offset-2 centered">
+        <a href="" class="btn btn-customPortfolio btn-lg centered" id="firstPortfolioButton">View My Portfolio</a>
+      </div>
+      <div class="col-md-3 col-md-offset-2 centered">
+        <a href="" class="btn btn-customPortfolio btn-lg centered" id="secondPortfolioButton">View My Resume</a>
       </div>
     </div>
   </div>
