Updated button position & hover colors.

--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
             Projects in PHP and MySQL</a></h3>
           <p>Currently Enrolled</p>
       </div>
-      <div class="col-md-3 col-md-offset-2 centered">
+      <div class="col-md-3 col-md-offset-2 centered moreButton">
         <a href="" class="btn btn-customPortfolio btn-lg centered" id="firstPortfolioButton">View My Portfolio</a>
       </div>
-      <div class="col-md-3 col-md-offset-2 centered">
+      <div class="col-md-3 col-md-offset-2 centered moreButton">
         <a href="" class="btn btn-customPortfolio btn-lg centered" id="secondPortfolioButton">View My Resume</a>
       </div>
     </div>
