--- a/index.html
+++ b/index.html
@@ -45,8 +45,45 @@
           <li><a href="">Blog</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Resume</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#contactModal">Contact</a></li>
         </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal for the contact page -->
+  <div class="modal" id="contactModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">x</button>
+          <h4 class="modal-title">Let's Get In Touch!</h4>
+        </div>
+        <div class="modal-body">
+          <p>Questions, comments, inquiries? Send me an email and I'll get back to you as soon as possible!</p>
+          <form method="POST">
+            <div class="form-group">
+              <input type="text" name="name" class="form-control" placeholder="Name" />
+            </div>
+            <div class="form-group">
+              <input type="text" name="email" class="form-control" placeholder="Email" />
+            </div>
+            <div class="form-group">
+              <input type="text" name="subject" class="form-control" placeholder="Subject" />
+            </div>
+            <div class="form-group">
+              <textarea name="message" class="form-control" placeholder="Message" rows="5"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <ul>
+            <li><a href="https://github.com/davidlamt" target="_blank">GitHub</a></li>
+            <li><a href="https://twitter.com/davidlamt" target="_blank">Twitter</a></li>
+          </ul>
+          <button class="btn btn-success">Send Email</button>
+          <button class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
